--- a/composer.json
+++ b/composer.json
@@ -3,22 +3,23 @@
     "description": "Laravel Shoppingcart",
     "keywords": ["laravel", "shoppingcart"],
     "license": "MIT",
-    "authors": [{
-        "name": "Michel Melo",
-        "email": "eu@michelmelo.pt"
-    }, {
-        "name": "Rob Gloudemans",
-        "email": "info@robgloudemans.nl"
-    }],
+    "authors": [
+        {
+            "name": "Michel Melo",
+            "email": "eu@michelmelo.pt"
+        },
+        
+    ],
     "require": {
-        "illuminate/support": "5.5.* || 5.6.* || 5.7.* || 5.8.* || 6.*.* || 7.*.*",
-        "illuminate/session": "5.5.* || 5.6.* || 5.7.* || 5.8.* || 5.8.* || 6.*.* || 7.*.*",
-        "illuminate/events": "5.5.* || 5.6.* || 5.7.* || 5.8.* || 6.*.* || 7.*.*"
+        "illuminate/support": "5.4.*||5.5.*||5.6.*||5.7.*||5.8.*||^6.0||^7.0||^8.0||^9.0",
+        "illuminate/session": "5.4.*||5.5.*||5.6.*||5.7.*||5.8.*||^6.0||^7.0||^8.0||^9.0",
+        "illuminate/events": "5.4.*||5.5.*||5.6.*||5.7.*||5.8.*||^6.0||^7.0||^8.0||^9.0",
+        "nesbot/carbon": "~1.20||^1.26.3||^2.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "~5.0 || ~6.0 || ~7.0 || ~7.5 || ~8.0 || ~8.5",
-        "mockery/mockery": "~0.9.0 || ~1.0 || ~1.3.1",
-        "orchestra/testbench": "~3.1"
+        "phpunit/phpunit": "~5.0||~6.0||~7.0||~8.0||~9.0",
+        "mockery/mockery": "^1.0",
+        "orchestra/testbench": "^3.4|^4.0|^5.0|^6.0"
     },
     "autoload": {
         "psr-4": {
@@ -31,9 +32,9 @@
         }
     },
     "suggest": {
-        "MichelMelo/notify": "Simple flash notifications for Laravel"
+        "gloudemans/notify": "Simple flash notifications for Laravel"
     },
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "extra": {
         "laravel": {
             "providers": [
