--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
     "require-dev": {
         "phpunit/phpunit": "~5.0||~6.0||~7.0||~8.0||~9.0",
         "mockery/mockery": "^1.0",
-        "orchestra/testbench": "^3.4|^4.0|^5.0|^6.0"
+        "orchestra/testbench": "^3.4|^4.0|^5.0|^6.0",
+        "friendsofphp/php-cs-fixer": "^3.9"
     },
     "autoload": {
         "psr-4": {
@@ -44,5 +45,8 @@
                 "Cart": "MichelMelo\\Shoppingcart\\Facades\\Cart"
             }
         }
+    },
+    "scripts": {
+        "phpcsfixer": "php-cs-fixer fix"
     }
 }
